asset/sass/_screen.scss
/* ... */
h1, h2, h3, h4, h5, h6 {
    color: #000;
}

h1 {
    text-align: center;
    font-size: 2 * $base-font-size;
    margin-bottom: $spacing-l;
    line-height: 2 * $base-line-height;
    font-weight: normal;
}

h2 {
    font-size: 1.5 * $base-font-size;
    margin-bottom: $spacing-l;
    line-height: 2 * $base-line-height;
    font-weight: normal;
}

p {
    margin: $spacing-l 0;
}

/* @group ----- Mixins ----- */

@mixin de-list {
    list-style: none;
    padding: 0;
}

/* @end */

/* @group ----- Containers ----- */

#wrap {
    max-width: 1100px;
    margin: auto;
    padding: 0 $spacing-l;
    position: relative;
}

#wrap {
    padding-bottom: 2 * $spacing-l;
}

/* @end */

/* @group ----- Tables ----- */

table {
    margin: (2 * $spacing-l) auto;
    border-collapse: collapse;
    border-top: 1px solid $gray;
    border-bottom: 1px solid $gray;
}

th, td {
    padding: $spacing-m;
    vertical-align: top;
}

th {
    border-bottom: 3px solid $gray;
    padding-bottom: $spacing-m - 3px;
    text-align: left;
}

td {
    border-bottom: 1px solid $gray;
    padding-bottom: $spacing-m - 1px;
}

/* @end */

/* @group ----- Forms ----- */

::-webkit-input-placeholder {
    font-style: italic;
}
::-moz-placeholder {
    font-style: italic;
}
:-ms-input-placeholder {
    font-style: italic;
}
:-moz-placeholder {
    font-style: italic;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

select {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    border: 1px solid $gray;
    border-radius: 2px;
    font-size: $base-font-size;
    line-height: $base-line-height;
    color: $dark-gray;
    height: 1.5 * $spacing-l;
    background: #fff url('../../../../application/asset/img/select-arrow.svg') no-repeat;
    background-position: right (.25 * $spacing-l) center;
    background-size: .3175 * $base-font-size;
    padding: $spacing-s $spacing-l $spacing-s $spacing-s;
    
    option {
      margin: 0 $spacing-m;
    }
}

button,
.button,
input[type="submit"] {
    background-color: $gray;
    color: $dark-gray;
    border: 0;
    cursor: pointer;
    padding: $spacing-s;
    min-height: 1.5 * $spacing-l;
    min-width: 1.5 * $spacing-l;
    line-height: $base-line-height;
    text-align: center;
}

a.button {
    color: #000;
    display: inline-block;

    &:hover {
        text-decoration: none;
    }
}

input[type="text"],
input[type="password"],
input[type="email"],
input[type="url"],
input[type="number"],
input[type="date"],
input[type="datetime-local"] {
    border: 1px solid $gray;
    padding: $spacing-s - 1px;
    height: 1.5 * $base-line-height;
}

textarea {
    border: 1px solid $gray;
    padding: $spacing-s - 1px;
}

.field {
    margin-bottom: $spacing-l;
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

.field .field-meta {
    width: 25%;
    padding-right: $spacing-l;
    text-align: right;
    line-height: 1.5 * $base-line-height;
}

.field-description {
    margin-bottom: $spacing-s;
}

.required.field .field-meta:after {
    content: "*";
}

.field .field-meta legend {
    float: right;
}

.field .inputs {
    width: 75%;
    padding-left: $spacing-l;
}

.field .collapsible {
    font-size: .75 * $base-font-size;
    clear: both;
    line-height: .75 * $base-line-height;
}

.field .inputs ~ *,
form input[type="submit"] {
    margin-left: calc(25% + #{$spacing-l});
    margin-top: $spacing-m;
}

#advanced-search .value:not(:first-child) {
    margin-top: $spacing-s;
}

#advanced-search {
    padding: $spacing-l 0;
}

#advanced-search input[type="text"] {
    height: 1.5 * $base-line-height;
}

#advanced-search input[type="submit"] {
    font-size: 1.25 * $base-font-size;
    padding: $spacing-m;
}

#advanced-search .multi-value div.value:only-of-type .remove-value {
    display: none;
}

#advanced-search .add-value {
    display: block;
    margin-left: auto;
}

#advanced-search .remove-value {
    text-indent: -9999px;
    position: relative;
    width: 1.5 * $spacing-l;
    height: 1.5 * $spacing-l;
    margin-left: $spacing-s;

    &:before {
        text-indent: 0;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        line-height: 1.5 * $base-line-height;
    }
}

.search-entry:not(:first-child) {
    margin-top: $spacing-m;
}

/* @end */

/* @group ----- Navigation ----- */

nav .navigation,
nav ul {
    @include de-list;
}

.item-pagination.navigation {
    border-top: 1px solid $gray;
    padding-top: $spacing-m - 1px;
    display: flex;
    justify-content: space-between;
}

.secondary-nav {
    text-align: center;
}

.secondary-nav ul {
    margin: 0 0 -1px;
    border-bottom: 1px solid $gray;
    padding-bottom: -1px;
}

.secondary-nav.navigation li {
    display: inline-block;
    margin-right: .5em;
    padding-bottom: $spacing-m;

    &.active a {
        color: $red;
    }
}

.secondary-nav a {
    color: $dark-gray;
}

#skipnav {
  position: fixed;
  top: $spacing-l;
  left: 50%;
  border: 1px solid $gray;
  transform: translateX(-50%);
  z-index: -5;
  padding: $spacing-s;
  background-color: #fff;
  opacity: 0;
  
  &:focus {
    z-index: 1000;
    opacity: 1;
  }
}

/* @end */

/* @group ----- Header ----- */

#skipnav {
    position: absolute;
    top: 0;
    left: -9999px;
    background-color: #fff;
    padding: $spacing-s;
    display: inline-block;

    &:focus {
        left: 50%;
        transform: translateX(-50%);
    }
}

header nav .navigation {
    position: relative;
    list-style-type: none;
    padding: 0;
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    border-top: 1px solid $gray;
    border-bottom: 1px solid $gray;
    padding: 0;
    margin: $spacing-l 0;
}

header nav li {
    display: block;
    margin: 0 .5em;
}

header nav a {
    font-size: .875 * $base-font-size;
}
/* ... */

